# DistributedColonyRust

./: .gitignore  CLAUDE.md  Cargo.toml  PROFILES.md  README.md  aws_full_cycle.sh  benchmark_profiles.sh  build_and_run.sh  cloud_colony_cycle.sh  debug_nodes.sh  gather_logs_from_nodes.sh  kill_all.sh  open_gui.sh  prometheus.yml  restart_game.sh  run_cycle_autonomous.sh  run_profiler.sh  setup_mac.sh  show_colony.sh
.cursor/: rules.md
.cursor/rules/: my-rules.mdc
CDK/: .gitignore  README.md  cdk.context.json  cdk.json  create-keypair.sh  package-lock.json  package.json  ssh-backend.sh  ssh-coordinator.sh  stop.sh  tsconfig.json
CDK/lib/: coordinator-stack.ts  spot-instance-stack.ts  spot-instances-stack.ts  user-data-builder.ts
Docker/: .dockerignore  Dockerfile  Dockerfile.base  README.md  build-and-push-base.sh  build-and-push-colony.sh  build-and-push.sh  deploy.sh  recycle-spot-fleets.sh
ai_specs/: add_original_color_stat_metric.md  backend_topology_retrieval_from_coordinator.md  coordinator_controlled_tick_start.md  creature_statistics_snapshot.md  dynamic_topology_elimination.md  gui_cluster_tab.md  gui_http_api_migration.md  gui_latency_tracking.md  gui_topology_retrieval_from_coordinator.md  port_canonization.md  topology_in_progress_indication.md
ai_specs/completed/: backend_tick_latency_logging.md  backend_topology_retrieval_from_coordinator.md  cloud_start_colony_idempotency.task.md  colony_instance_id.md  coordinator_controlled_tick_start.md  coordinator_http_image_capture.md  creature_image_capture.md  creature_statistics_snapshot.md  dynamic_topology_elimination.md  gui_cluster_tab.md  gui_http_api_migration.md  gui_public_ip_support.md  gui_topology_retrieval_from_coordinator.md  port_canonization.md  s3_upload_script.md  shard_id_string_format.md  topology_in_progress_indication.md
analysis/: parquet_schema.txt  requirements.txt  sample_stat.json  stats_shots_exploration.ipynb  stats_shots_to_parquet.py
bi/: README_DASHBOARD.md  bi_dashboard.ipynb  dashboard.py  event_sample_2.json  events_parquet_schema.txt  ingest_bi.py  requirements.txt
bi/dashboard-web/: README.md  index.html  package-lock.json  package.json  server.js  tsconfig.node.json  vite.config.ts
bi/dashboard-web/src/: App.tsx  main.tsx
bi/dashboard-web/src/components/: ColonySelector.tsx  CreatureCoverageChart.tsx
bi/dashboard-web/src/utils/: arrowLoader.ts  dataTransform.ts
bi/schema/: event_sample_1.json  events_parquet_schema.txt  images_parquet_schema.txt  stats_parquet_schema.txt  stats_sample.json
crates/backend/: Cargo.toml
crates/backend/src/: backend_client.rs  backend_config.rs  be_be_calls.rs  be_colony_events.rs  be_main.rs  be_ticker.rs  colony.rs  colony_events.rs  colony_shard.rs  http_server.rs  main.rs  shard_storage.rs  shard_topography.rs  shard_utils.rs  ticker.rs  topography.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: backend_client.rs  cloud_start.rs  colony_capture.rs  colony_event_generator.rs  colony_start.rs  colony_stats.rs  coordinator_context.rs  coordinator_main.rs  coordinator_storage.rs  coordinator_ticker.rs  event_logging.rs  global_topography.rs  http_server.rs  init_colony.rs  lib.rs  main.rs  tick_monitor.rs
crates/coordinator/tests/: test_cloud_start_colony.rs  test_colony_start.rs  test_colony_stats.rs  test_http_server_cloud.rs
crates/frontend/: Cargo.toml  fe_main.rs
crates/frontend/src/: image_save.rs  main.rs
crates/gui/: Cargo.toml
crates/gui/src/: call_be.rs  connection_pool.rs  gui_main.rs  latency_tracker.rs  main.rs
crates/shared/: Cargo.toml  lib.rs
crates/shared/src/: backend_communication.rs  be_api.rs  cluster_registry.rs  cluster_topology.rs  colony_event_shared.rs  colony_events.rs  colony_model.rs  connection_pool.rs  coordinator_api.rs  lib.rs  logging.rs  metrics.rs  ssm.rs  storage.rs  utils.rs
crates/shared/tests/: test_cluster_topology_serialization.rs  test_shard_id_format.rs  test_ssm_cloud.rs  test_utils.rs
feature_specs/: Docker_spec.md  cloud_start_colony_idempotent.task.md  no_state_persistence.md  ssm_substitution_localhost.md
feature_specs/done/: ssm_substitution_localhost.md
feature_specs/in progress/: aws_colony_initialization_panic.bug.md
scripts/: aws_full_cycle.sh  build_and_run.sh  cloud-start.sh  cloud_start.sh  colony_start.sh  debug_nodes.sh  gather_logs_from_nodes.sh  kill_all.sh  local_kill.sh  local_run.sh  restart_game.sh  s3_upload_daemon.sh  ssh_backend.sh  ssh_coordinator.sh
src/backend/: be_main.rs
