[workspace]
members = [
    "crates/backend",
    "crates/shared",
    "crates/coordinator",
    "crates/gui"
]
resolver = "2"

[profile.release]
debug = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0 

[profile.fast]
inherits = "dev"
opt-level = 1
debug = true
incremental = true
codegen-units = 256
lto = false
panic = "abort"
strip = false
overflow-checks = false

[profile.balanced]
inherits = "dev"
opt-level = 3
debug = true
incremental = true
codegen-units = 16
lto = "thin"
panic = "abort"
strip = false
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = true
