[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bincode = "1.3"
futures-util = { version = "0.3", features = ["sink"] }
rand = { version = "0.8", features = ["small_rng"] }
prometheus = "0.13"
lazy_static = "1.4" 