[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "coordinator"
path = "src/lib.rs"

[[bin]]
name = "coordinator"
path = "src/coordinator_main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
backoff = { version = "0.4", features = ["tokio"] } 

[features]
cloud = []