[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bincode = "1.3"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] } 
image = "0.25.6"
