[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
shared = { path = "../shared" }
bincode = "1.3"
rand = "0.8"
egui_extras = "0.27"
