[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gui"
path = "src/gui_main.rs"

[dependencies]
# Force eframe to use wgpu backend on macOS to avoid old objc/icrate via glutin/glow
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
reqwest = { version = "0.12", default-features = true, features = ["json", "blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
shared = { path = "../shared" }
bincode = "1.3"
rand = "0.8"
egui_extras = { version = "0.29", default-features = false, features = ["image"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
