[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# [lib]
# path = "src/be_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prometheus = "0.13"
lazy_static = "1.4" 
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1.0", features = ["net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
aws-config = "1.1"
aws-sdk-ssm = "1.13"
backoff = { version = "0.4", features = ["tokio"] } 

[features]
# Cloud/AWS specific code paths and tests
cloud = []